big update from yesterday and today (I need to commit more); added blue light filter with sunglasses icon svg; narrowed down on 10 videos for testing from AWS servers; hid download button because it really mostly only makes sense for the app; fixed visual bug where in video tiles the duration would fall outside the thumbnail if the tile was too high; updated todo;

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ body {
     background-color: var(--dark-theme-background-color);
     color: var(--dark-theme-text-color);
 }
+body.blue-filter, body.blue-filter .video-container.full-screen video {
+    /* filter: sepia(0.6); */
+    filter: sepia(.8) saturate(1.5) brightness(.8) hue-rotate(330deg);
+}
 /* Buttons */
 .btn {
     background-color: var(--dark-theme-divider-color);
@@ -56,6 +60,10 @@ body {
 }
 .rounded {
     border-radius: 5rem!important;
+}
+/* Video Tiles */
+.vid_tile {
+    cursor: pointer;
 }
 /* Navbar */
 .navbar {
